Fix link colors
Links in posts were not visible.

--- a/less/common.less
+++ b/less/common.less
@@ -197,6 +197,14 @@ body > .content-wrapper {
   background-color: @footer-bg;
   color: @footer-color;
 
+  a {
+    color: @brand-primary;
+
+    &:hover {
+      color: darken(@brand-primary, 15%)
+    }
+  }
+
   .wrapper {
     .make-row();
 
