--- a/less/english/variables.less
+++ b/less/english/variables.less
@@ -44,7 +44,7 @@
 // Links
 // -------------------------
 
-@link-color:            @brand-primary;
+@link-color:            @footer-bg;
 @link-hover-color:      darken(@link-color, 15%);
 
 // Typography
